go 32: update password after register
